# aganitha-chatbot

./: .gitignore  config.yml  pyproject.toml
agan_chatbot/: aganitha_chatbot.py  authentication.py  config.yml  constants.py  creds.xyz  gdrive_extractor.py  gdriveloader.py  knowlede_directory_extractor.py  pipeline.py  run_pipeline.py  video_extracter.py  video_extractor.py  website_extractor.py
aganitha_chatbot_pipeline/: authentication.py  pipeline.py  run_pipeline.py  video_extractor.py  website_extractor.py  yaml_parser.py
tests/: gdrive_tester.py  knowledge_extractor_tester.py  milvus.py  video_tester.py  website_tester.py
