[tool.poetry]
name = "agan-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "agan_chatbot"}]

[tool.poetry.scripts]
aganitha-chatbot = "agan_chatbot.aganitha_chatbot:main"
aganitha-chatbot-pipeline = "agan_chatbot.run_pipeline:main"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.83.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
langchain = "^0.0.131"
pypdf2 = "^3.0.1"
openai = "^0.27.4"
typer = "^0.7.0"
faiss-cpu = "^1.7.3"
moviepy = "^1.0.3"
ffmpeg-python = "^0.2.0"
pytube = "^12.1.3"
numba = "^0.56.4"
bs4 = "^0.0.1"
unstructured = "^0.5.11"
fake-useragent = "^1.1.3"
pymilvus = "^2.2.5"


[[tool.poetry.source]]
name = "dev"
url = "https://dev-pypi.aganitha.ai"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
